[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/spot.gd" type="Script" id=1]
[ext_resource path="res://animations/despawn_spots.tres" type="Animation" id=2]
[ext_resource path="res://animations/only_match1.tres" type="Animation" id=3]
[ext_resource path="res://animations/only_match2.tres" type="Animation" id=4]
[ext_resource path="res://animations/only_match3.tres" type="Animation" id=5]
[ext_resource path="res://animations/only_unmatch.tres" type="Animation" id=6]
[ext_resource path="res://animations/spawn_spots.tres" type="Animation" id=7]
[ext_resource path="res://scripts/spot_control.gd" type="Script" id=8]
[ext_resource path="res://themes/CircleFilled.png" type="Texture" id=9]
[ext_resource path="res://themes/arial40.fnt" type="BitmapFont" id=10]
[ext_resource path="res://themes/white_box.tres" type="StyleBox" id=11]

[node name="SurfContainer" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 509.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 408.0
script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }
shape = 1
min_change = 0.1
cooldown = 0.9
timeout = 0.0

[node name="SurfSpotAnimator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("SurfSpot")
anims/despawn_spots = ExtResource( 2 )
anims/only_match1 = ExtResource( 3 )
anims/only_match2 = ExtResource( 4 )
anims/only_match3 = ExtResource( 5 )
anims/only_unmatch = ExtResource( 6 )
anims/spawn_spots = ExtResource( 7 )
next/despawn_spots = ""
next/only_match1 = ""
next/only_match2 = ""
next/only_match3 = ""
next/only_unmatch = ""
next/spawn_spots = ""
playback/active = true
playback/speed = 1.0
blend_times = [ "despawn_spots", "despawn_spots", 0.5, "only_match3", "despawn_spots", 0.5, "only_match3", "only_match3", 0.9, "only_unmatch", "despawn_spots", 0.5, "only_unmatch", "only_unmatch", 0.9, "spawn_spots", "despawn_spots", 0.2, "spawn_spots", "only_match3", 0.5, "spawn_spots", "only_unmatch", 0.5, "spawn_spots", "spawn_spots", 0.8, "spawn_spots", "only_match2", 0.5, "spawn_spots", "only_match1", 0.5, "despawn_labels", "despawn_labels", 0.2, "despawn_labels", "show_label_input", 0.2, "show_label_input", "despawn_labels", 0.2, "show_label_input", "show_label_input", 0.2, "show_label_input", "spawn_labels", 0.2, "spawn_labels", "despawn_labels", 0.2, "spawn_labels", "show_label_input", 0.2, "spawn_labels", "spawn_labels", 0.2, "only_match2", "despawn_spots", 0.5, "only_match2", "only_match2", 0.9, "only_match1", "despawn_spots", 0.5, "only_match1", "only_match1", 0.9 ]
autoplay = ""
script/script = ExtResource( 8 )
mouse_control = false
optflow_control = true
surf_control = true

[node name="SurfSpot" type="TextureFrame" parent="SurfSpotAnimator"]

visibility/self_opacity = 0.5
anchor/left = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 235.0
margin/top = 183.0
margin/right = -277.0
margin/bottom = -95.0
texture = ExtResource( 9 )
stretch_mode = 0
script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }
shape = 2
min_change = 0.1
cooldown = 0.0
timeout = 2.0

[node name="MatchSpot1" type="TextureFrame" parent="SurfSpotAnimator/SurfSpot"]

visibility/visible = false
visibility/self_opacity = 0.5
visibility/behind_parent = true
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 683.0
margin/top = 899.0
margin/right = 171.0
margin/bottom = 387.0
texture = ExtResource( 9 )
stretch_mode = 0
script/script = ExtResource( 1 )
shape = 2
min_change = 0.5
cooldown = 0.9
timeout = 0.0

[node name="Label" type="Label" parent="SurfSpotAnimator/SurfSpot/MatchSpot1"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 258.0
margin/top = 71.0
margin/right = -83.0
margin/bottom = -29.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "N/A"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="MatchSpot2" type="TextureFrame" parent="SurfSpotAnimator/SurfSpot"]

visibility/visible = false
visibility/self_opacity = 0.5
visibility/behind_parent = true
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 235.0
margin/top = 842.0
margin/right = -277.0
margin/bottom = 330.0
texture = ExtResource( 9 )
stretch_mode = 0
script/script = ExtResource( 1 )
shape = 2
min_change = 0.8
cooldown = 0.9
timeout = 0.0

[node name="Label" type="Label" parent="SurfSpotAnimator/SurfSpot/MatchSpot2"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 250.0
margin/top = 71.0
margin/right = -83.0
margin/bottom = -29.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "N/A"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="MatchSpot3" type="TextureFrame" parent="SurfSpotAnimator/SurfSpot"]

visibility/visible = false
visibility/self_opacity = 0.5
visibility/behind_parent = true
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.55, 0.55 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 834.0
margin/top = 519.0
margin/right = 322.0
margin/bottom = 7.0
texture = ExtResource( 9 )
stretch_mode = 0
script/script = ExtResource( 1 )
shape = 2
min_change = 1.5
cooldown = 0.9
timeout = 0.0

[node name="Label" type="Label" parent="SurfSpotAnimator/SurfSpot/MatchSpot3"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 252.0
margin/top = 71.0
margin/right = -84.0
margin/bottom = -29.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "N/A"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="UnmatchSpot" type="TextureFrame" parent="SurfSpotAnimator/SurfSpot"]

visibility/visible = false
visibility/self_opacity = 0.5
visibility/behind_parent = true
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 717.0
margin/top = 188.0
margin/right = 205.0
margin/bottom = -324.0
texture = ExtResource( 9 )
stretch_mode = 0
script/script = ExtResource( 1 )
shape = 2
min_change = 3.0
cooldown = 0.9
timeout = 0.0

[node name="Label" type="Label" parent="SurfSpotAnimator/SurfSpot/UnmatchSpot"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 256.0
margin/top = 96.0
margin/right = 1.0
margin/bottom = -4.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "\?\?\?"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="LineEdit" type="LineEdit" parent="SurfSpotAnimator/SurfSpot/UnmatchSpot"]

visibility/behind_parent = true
anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1684.0
margin/top = 182.0
margin/right = 1317.0
margin/bottom = 230.0
custom_styles/read_only = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 10 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.445313, 0.445313, 0.445313, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
placeholder/text = "Type label..."
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65
__meta__ = { "_edit_lock_":true }

[node name="Status" type="Label" parent="SurfSpotAnimator/SurfSpot"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -379.0
margin/top = -445.0
margin/right = 243.0
margin/bottom = -396.0
custom_fonts/font = ExtResource( 10 )
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }


